Added insert collection

--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -27,6 +27,76 @@
             android:fontFamily="serif"
             android:text="Add to your collection."
             android:textColor="@color/tan_700" />
+
+        <EditText
+            android:id="@+id/etTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/edit_text_background"
+            android:hint="Title"
+            android:padding="16dp" />
+
+        <EditText
+            android:id="@+id/etAuthor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edit_text_background"
+            android:hint="Author"
+            android:padding="16dp" />
+
+        <EditText
+            android:id="@+id/etDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edit_text_background"
+            android:hint="Description"
+            android:inputType="textMultiLine"
+            android:padding="16dp" />
+
+        <Spinner
+            android:id="@+id/spType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edit_text_background"
+            android:entries="@array/type"
+            android:padding="16dp" />
+
+        <EditText
+            android:id="@+id/etDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edit_text_background"
+            android:hint="Date"
+            android:inputType="date"
+            android:padding="16dp" />
+
+
+        <Switch
+            android:id="@+id/swViewed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="Not Viewed"
+            android:thumbTint="@drawable/custom_thumb"
+            android:trackTint="@drawable/custom_track" />
+
+        <Button
+            android:id="@+id/btnCreate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/buttons_background"
+            android:padding="16dp"
+            android:text="Create"
+            android:textAllCaps="false"
+            android:textColor="@color/tan_200" />
+
     </LinearLayout>
+
 
 </FrameLayout>
