--- a/app/src/main/res/layout/collection_row.xml
+++ b/app/src/main/res/layout/collection_row.xml
@@ -56,6 +56,22 @@
                 app:layout_constraintVertical_bias="1.0"
                 app:srcCompat="@drawable/ic_person"
                 app:tint="@color/tan_500" />
+
+            <RatingBar
+                android:id="@+id/rbReview"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:progressTint="#FFD700"
+                android:rating="4"
+                android:secondaryProgressTint="#FFD700"
+                android:stepSize="0.1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtType" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
